crates/uitest/fixtures/ty_check/nested_storage_map_contract_field.snap
---
source: crates/uitest/tests/ty_check.rs
assertion_line: 27
expression: diags
input_file: fixtures/ty_check/nested_storage_map_contract_field.fe
---
error[3-0043]: nested storage maps are not supported as contract fields
    ┌─ nested_storage_map_contract_field.fe:4:17
    │
  4 │     mut nested: StorageMap<u256, StorageMap<u256, u256>>,
    │                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ this `StorageMap` stores another `StorageMap` as its value
    │
    ┌─ src/evm/storage_map.fe:128:12
    │
128 │ pub struct StorageMap<K, V, const SALT: u256 = _> {
    │            ---------- `StorageMap` is defined here
    │
    = use a composite key such as `StorageMap<(OuterKey, InnerKey), Value>` instead
